--- a/MoneyManager/MoneyManager/Views/_ViewImports.cshtml
+++ b/MoneyManager/MoneyManager/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using MoneyManager
 @using MoneyManager.Models
+@using MoneyManager.Core.Models.User
+@using MoneyManager.Core.Models.Income
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
