--- a/MoneyManager/MoneyManager/wwwroot/css/site.css
+++ b/MoneyManager/MoneyManager/wwwroot/css/site.css
@@ -16,3 +16,13 @@ html {
 body {
   margin-bottom: 60px;
 }
+#welcome {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%)translateY(-50%);
+}
+#h1Welcome {
+    color: #0d6efd;
+    font-family: Arial, Helvetica, sans-serif;
+}
