--- a/MoneyManager/MoneyManager/Views/Shared/_Layout.cshtml
+++ b/MoneyManager/MoneyManager/Views/Shared/_Layout.cshtml
@@ -12,16 +12,19 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand nav-link bg-white" asp-area="" asp-controller="Home" asp-action="Index">Money Manager</a>
+                <a class="navbar-brand nav-link bg-white" asp-area="" asp-controller="Home" asp-action="Index">MoneyManager</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                       @* <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>*@
+                        @if (User.Identity != null && User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link bg-white" asp-area="" asp-controller="Income" asp-action="All">Incomes</a>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -36,7 +39,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.UtcNow.Year - MoneyManager 
+            &copy; @DateTime.UtcNow.Year - MoneyManager
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
