--- a/MoneyManager/MoneyManager/Views/Income/Edit.cshtml
+++ b/MoneyManager/MoneyManager/Views/Income/Edit.cshtml
@@ -1,7 +1,7 @@
-﻿@model AddIncomeViewModel;
+﻿@model EditIncomeViewModel;
 
 @{
-    ViewBag.Title = "Add Income";
+    ViewBag.Title = "Edit Income";
 }
 
 <div class="nav-link bg-white">
@@ -21,8 +21,8 @@
 
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
-
         <form method="post">
+            @Html.HiddenFor(m=>m.Id)
             <div class="mb-3">
                 <label asp-for="@Model.Amount" class="form-label">Ammount</label>
                 <input asp-for="@Model.Amount" class="form-control" aria-required="true" />
@@ -35,7 +35,7 @@
             </div>
             <div class="mb-3">
                 <label asp-for="@Model.Date" class="form-label">Date</label>
-                <input type="datetime-local" asp-for="@Model.Date" class="form-control" aria-required="true" value="@DateTime.Now" />
+                <input type="datetime-local" asp-for="@Model.Date" class="form-control" aria-required="true"/>
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="mb-3">
@@ -59,7 +59,7 @@
                 <span asp-validation-for="AccountId" class="text-danger"></span>
             </div>
             <div class="text-center row">
-                <input class="fs-6 btn btn-success mb-3 p-2" type="submit" value="Add" />
+                <input class="fs-6 btn btn-success mb-3 p-2" type="submit" value="Edit" />
             </div>
         </form>
     </div>
