--- a/MoneyManager/MoneyManager/Views/Shared/_Layout.cshtml
+++ b/MoneyManager/MoneyManager/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                             <li class="nav-item">
                                 <a class="nav-link bg-white" asp-area="" asp-controller="Income" asp-action="All">Incomes</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link bg-white" asp-area="" asp-controller="Expense" asp-action="All">Expenses</a>
+                            </li>
                         }
                     </ul>
                     <partial name="_LoginPartial" />
