--- a/MoneyManager/MoneyManager/Views/Expense/Edit.cshtml
+++ b/MoneyManager/MoneyManager/Views/Expense/Edit.cshtml
@@ -1,7 +1,7 @@
-﻿@model AddIncomeViewModel;
+﻿@model EditExpenseViewModel;
 
 @{
-    ViewBag.Title = "Add Income";
+    ViewBag.Title = "Edit Expense";
 }
 
 <div class="nav-link bg-white">
@@ -10,7 +10,7 @@
 
 <div class="text-center row">
     <hr />
-    <form class="input-group-sm" asp-controller="CategoryIncome" asp-action="Add" method="post">
+    <form class="input-group-sm" asp-controller="CategoryExpense" asp-action="Add" method="post">
         <input type="submit" value="Add New Category" class="w-100 fs-6 btn btn-primary btn-block mb-3 p-2" />
     </form>
     <form class="input-group-sm" asp-controller="Account" asp-action="Add" method="post">
@@ -21,13 +21,12 @@
 
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
-
         <form method="post">
+            @Html.HiddenFor(m=>m.Id)
             <div class="mb-3">
                 <label asp-for="@Model.Amount" class="form-label">Ammount</label>
                 <input asp-for="@Model.Amount" class="form-control" aria-required="true" />
                 <span asp-validation-for="Amount" class="text-danger"></span>
-                @Html.ValidationMessageFor(x => x.Amount)
             </div>
             <div class="mb-3">
                 <label asp-for="@Model.Description" class="form-label">Description</label>
@@ -36,7 +35,7 @@
             </div>
             <div class="mb-3">
                 <label asp-for="@Model.Date" class="form-label">Date</label>
-                <input type="datetime-local" asp-for="@Model.Date" class="form-control" aria-required="true" value="@DateTime.Now" />
+                <input type="datetime-local" asp-for="@Model.Date" class="form-control" aria-required="true" />
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="mb-3">
@@ -60,7 +59,7 @@
                 <span asp-validation-for="AccountId" class="text-danger"></span>
             </div>
             <div class="text-center row">
-                <input class="fs-6 btn btn-success mb-3 p-2" type="submit" value="Add" />
+                <input class="fs-6 btn btn-success mb-3 p-2" type="submit" value="Edit" />
             </div>
         </form>
     </div>
