--- a/MoneyManager/MoneyManager/Views/_ViewImports.cshtml
+++ b/MoneyManager/MoneyManager/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using MoneyManager.Models
 @using MoneyManager.Core.Models.User
 @using MoneyManager.Core.Models.Income
+@using MoneyManager.Core.Models.Expense
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
