Add Account Controller and view for displaying all accounts of user.

--- a/MoneyManager/MoneyManager/Views/_ViewImports.cshtml
+++ b/MoneyManager/MoneyManager/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using MoneyManager.Core.Models.User
 @using MoneyManager.Core.Models.Income
 @using MoneyManager.Core.Models.Expense
+@using MoneyManager.Core.Models.Account
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
