--- a/MoneyManager/MoneyManager/Views/Shared/_Layout.cshtml
+++ b/MoneyManager/MoneyManager/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                             <li class="nav-item">
                                 <a class="nav-link bg-white" asp-area="" asp-controller="Expense" asp-action="All">Expenses</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link bg-white" asp-area="" asp-controller="Account" asp-action="All">Accounts</a>
+                            </li>
                         }
                     </ul>
                     <partial name="_LoginPartial" />
