Add Account Controller with all actions inside

--- a/MoneyManager/MoneyManager/Views/Income/All.cshtml
+++ b/MoneyManager/MoneyManager/Views/Income/All.cshtml
@@ -43,7 +43,7 @@
             </div>
 
             <form method="get" class="input-group-sm" asp-controller="Income" asp-action="Edit">
-                <input type="submit" value="Edit" class="fs-6 btn btn-success mb-3 p-2" />
+                <input type="submit" value="Edit" class="btn-warning fs-6 btn btn-success mb-3 p-2" />
                 <input name="id" type="hidden" value="@income.Id" />
             </form>
             <form method="post" class="input-group-sm" asp-controller="Income" asp-action="Delete">
