--- a/MoneyManager/MoneyManager/Views/Account/All.cshtml
+++ b/MoneyManager/MoneyManager/Views/Account/All.cshtml
@@ -30,17 +30,27 @@
                     <tbody>
                         @foreach (var account in Model)
                         {
-
                             <tr>
                                 <td>@account.Name</td>
                                 <td>@String.Format("{0:N2}",account.Amount) lv.</td>
                                 <td>
-                                    <button type="submit" class="btn btn-success">Edit</button>
-                                    <button type="submit" class="btn btn-danger">Delete</button>
+                                    <div class="inline">
+                                        @using (Html.BeginForm("Edit", "Account", FormMethod.Get))
+                                        {
+                                            <input type="submit" class="btn btn-warning" value="Edit" />
+                                            <input name="id" type="hidden" value="@account.Id" />
+                                        }
+                                    </div>
+                                    <div class="inline">
+                                        @using (Html.BeginForm("Delete", "Account", FormMethod.Post))
+                                        {
+                                            <input type="submit" class="btn btn-danger" value="Delete" onclick="return confirm('Are you sure you want to delete this item?')" />
+                                            <input name="id" type="hidden" value="@account.Id" />
+                                        }
+                                    </div>
                                 </td>
                             </tr>
                         }
-
                     </tbody>
                 </table>
             }
