--- a/MoneyManager/MoneyManager/Views/Expense/Add.cshtml
+++ b/MoneyManager/MoneyManager/Views/Expense/Add.cshtml
@@ -13,7 +13,7 @@
     <form class="input-group-sm" asp-controller="CategoryExpense" asp-action="Add" method="post">
         <input type="submit" value="Add New Category" class="w-100 fs-6 btn btn-primary btn-block mb-3 p-2" />
     </form>
-    <form class="input-group-sm" asp-controller="Account" asp-action="Add" method="post">
+    <form class="input-group-sm" asp-controller="Account" asp-action="Add" method="get">
         <input type="submit" value="Add New Account" class="w-100 fs-6 btn btn-primary btn-block mb-3 p-2" />
     </form>
 </div>
