--- a/MoneyManager/MoneyManager/Views/Expense/Edit.cshtml
+++ b/MoneyManager/MoneyManager/Views/Expense/Edit.cshtml
@@ -69,12 +69,12 @@
                 }
             </div>
             <div class="text-center row">
-                <input class="fs-6 btn btn-success mb-3 p-2" type="submit" value="Cancel" />
+                <input class="fs-6 btn btn-warning mb-3 p-2" style="display: block; margin: 0 auto;width:50%" type="submit" value="Edit" />
             </div>
         </form>
         <form method="post" asp-action="Cancel" asp-controller="Expense">
             <div class="text-center row">
-                <input class="fs-6 btn btn-warning mb-3 p-2" type="submit" value="Edit" />
+                <input class="fs-6 btn btn-success mb-3 p-2" style="display: block; margin: 0 auto;width:50%" type="submit" value="Cancel" />
             </div>
         </form>
     </div>
