--- a/MoneyManager/MoneyManager/Views/Account/All.cshtml
+++ b/MoneyManager/MoneyManager/Views/Account/All.cshtml
@@ -19,8 +19,8 @@
         <div class="col-12">
             @if (Model.Count() != 0)
             {
-                <table class="table table-bordered">
-                    <thead>
+                <table class="table table-bordered table-hover table-sm">
+                    <thead class="table-light">
                         <tr>
                             <th scope="col">Account Name</th>
                             <th scope="col">Ammount</th>
