--- a/MoneyManager/MoneyManager/Views/CategoryIncome/Edit.cshtml
+++ b/MoneyManager/MoneyManager/Views/CategoryIncome/Edit.cshtml
@@ -1,12 +1,13 @@
-﻿@model EditAccountViewModel;
+﻿@model EditCategoryIncomeViewModel;
 
 @{
-    ViewBag.Title = "Edit Account";
+    ViewBag.Title = "Edit Category Income";
 }
 
 <div class="nav-link bg-white">
     <h2 class="text-center">@ViewBag.Title</h2>
 </div>
+
 
 
 <div class="row">
@@ -18,16 +19,11 @@
                 <input asp-for="@Model.Name" class="form-control" aria-required="true" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="mb-3">
-                <label asp-for="@Model.Amount" class="form-label">Ammount</label>
-                <input asp-for="@Model.Amount" class="form-control" aria-required="true" />
-                <span asp-validation-for="Amount" class="text-danger"></span>
-            </div>
             <div class="text-center row">
                 <input class="fs-6 btn btn-warning mb-3 p-2" style="display: block; margin: 0 auto;width:250px" type="submit" value="Edit" />
             </div>
         </form>
-        <form method="post" asp-action="Cancel" asp-controller="Account">
+        <form method="post" asp-action="Cancel" asp-controller="CategoryIncome">
             <div class="text-center row">
                 <input class="fs-6 btn btn-success mb-3 p-2" style="display: block; margin: 0 auto;width:250px" type="submit" value="Cancel" />
             </div>
