--- a/MoneyManager/MoneyManager/Views/_ViewImports.cshtml
+++ b/MoneyManager/MoneyManager/Views/_ViewImports.cshtml
@@ -4,4 +4,5 @@
 @using MoneyManager.Core.Models.Income
 @using MoneyManager.Core.Models.Expense
 @using MoneyManager.Core.Models.Account
+@using MoneyManager.Core.Models.CategoryIncome
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
