Add  CetegoryIncome controller with all actions inside

--- a/MoneyManager/MoneyManager/Views/Account/Add.cshtml
+++ b/MoneyManager/MoneyManager/Views/Account/Add.cshtml
@@ -11,6 +11,7 @@
 
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
+        <hr />
         <form method="post">
             <div class="mb-3">
                 <label asp-for="@Model.Name" class="form-label">Acount Name</label>
@@ -23,7 +24,7 @@
                 <span asp-validation-for="Amount" class="text-danger"></span>
             </div>
             <div>
-                <input class="fs-6 btn btn-success mb-3" style="display: block; margin: 0 auto;" type="submit" value="Add" />
+                <input class="fs-6 btn btn-success mb-3" style="display: block; margin: 0 auto;width:250px;" type="submit" value="Add" />
             </div>
         </form>
     </div>
