--- a/MoneyManager/MoneyManager/Views/CategoryExpense/Add.cshtml
+++ b/MoneyManager/MoneyManager/Views/CategoryExpense/Add.cshtml
@@ -1,7 +1,7 @@
-﻿@model AddCategoryIncomeViewModel;
+﻿@model AddCategoryExpenseViewModel;
 
 @{
-    ViewBag.Title = "Add Category Income";
+    ViewBag.Title = "Add Category Expense";
 }
 
 <div class="nav-link bg-white">
