--- a/MoneyManager/MoneyManager/Views/_ViewImports.cshtml
+++ b/MoneyManager/MoneyManager/Views/_ViewImports.cshtml
@@ -5,4 +5,5 @@
 @using MoneyManager.Core.Models.Expense
 @using MoneyManager.Core.Models.Account
 @using MoneyManager.Core.Models.CategoryIncome
+@using MoneyManager.Core.Models.CategoryExpense
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
