--- a/MoneyManager/MoneyManager/Views/Account/All.cshtml
+++ b/MoneyManager/MoneyManager/Views/Account/All.cshtml
@@ -9,14 +9,14 @@
 </div>
 <div class="text-center row">
     <hr />
-    <form class="input-group-sm" asp-controller="Account" asp-action="Add" method="get">
-        <input type="submit" value="Add New Account" class="w-100 fs-6 btn btn-primary btn-block mb-3 p-2" />
-    </form>
 </div>
 
 <div class="container">
     <div class="row">
         <div class="col-12">
+            <form class="input-group-sm" asp-controller="Account" asp-action="Add" method="get">
+                <input type="submit" value="Add New Account" class="col-12 fs-6 btn btn-primary btn-block mb-3 p-2" />
+            </form>
             @if (Model.Count() != 0)
             {
                 <table class="table table-bordered table-hover table-sm">
