--- a/MoneyManager/MoneyManager/Views/CategoryIncome/Edit.cshtml
+++ b/MoneyManager/MoneyManager/Views/CategoryIncome/Edit.cshtml
@@ -12,10 +12,11 @@
 
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
+        <hr />
         <form method="post">
             @Html.HiddenFor(m=>m.Id)
             <div class="mb-3">
-                <label asp-for="@Model.Name" class="form-label">Acount</label>
+                <label asp-for="@Model.Name" class="form-label">Category Name</label>
                 <input asp-for="@Model.Name" class="form-control" aria-required="true" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
