--- a/MoneyManager/MoneyManager/Views/Income/Add.cshtml
+++ b/MoneyManager/MoneyManager/Views/Income/Add.cshtml
@@ -60,7 +60,7 @@
                 <span asp-validation-for="AccountId" class="text-danger"></span>
             </div>
             <div class="text-center row">
-                <input class="fs-6 btn btn-success mb-3 p-2" type="submit" value="Add" />
+                <input class="fs-6 btn btn-success mb-3 p-2" style="display: block; margin: 0 auto;width:250px" type="submit" value="Add" />
             </div>
         </form>
     </div>
