Add Statistics Charts

--- a/MoneyManager/MoneyManager/Views/_ViewImports.cshtml
+++ b/MoneyManager/MoneyManager/Views/_ViewImports.cshtml
@@ -6,4 +6,5 @@
 @using MoneyManager.Core.Models.Account
 @using MoneyManager.Core.Models.CategoryIncome
 @using MoneyManager.Core.Models.CategoryExpense
+@using MoneyManager.Core.Models.Home
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
