Update Statistics controller

--- a/MoneyManager/MoneyManager/Views/Home/Dashboard.cshtml
+++ b/MoneyManager/MoneyManager/Views/Home/Dashboard.cshtml
@@ -33,7 +33,7 @@
     </div>
 </div>
 
-<!-- Incomes vs Expenses Pie Diagram -->
+<!-- Incomes vs Expenses for Week Pie Diagram -->
 
 <div class="container" style="display: flex;
     align-items: center;
@@ -67,29 +67,16 @@
     </div>
 </div>
 
-
-<!-- Expenses and Incomes by week Diagram -->
-
-<div class="container" style="display: flex;
-    align-items: center;
-    justify-content: center;padding: 10px;">
-    <div class="col-md-5">
-        <div class="card-header">
-            <canvas class="my-4 h-25" id="byDay"></canvas>
-        </div>
-    </div>
-</div>
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
 </script>
 
 <!-- Pie Diagram JS-->
 <script>
 
-    //incomes vs expenses
+    //incomes vs expenses for current week
 
     var xValues = ['Income', 'Expense'];
-    var yValues = [@Model.Totals.IncomeTotal, @Model.Totals.ExpenseTotal];
+    var yValues = [@Model.IncomesAndExpensesForWeek.Income, @Model.IncomesAndExpensesForWeek.Expense];
     var barColors = [
         "#0d6efd",
         "#e8102a"
@@ -107,7 +94,7 @@
         options: {
             title: {
                 display: true,
-                text: "Incomes vs Expenses"
+                text: "Incomes vs Expenses for Week"
             }
         }
     });
@@ -166,39 +153,6 @@
             title: {
                 display: true,
                 text: "Expenses by categories"
-            }
-        }
-    });
-
-
-    //Expenses and Incomes by week
-
-    var xValues3 = [100, 200, 300, 400, 500, 600, 700, 800, 900, 1000];
-
-    new Chart("byDay", {
-        type: "line",
-        legendText: "Incomes",
-        data: {
-            labels: xValues3,
-            datasets: [{
-                data: [860, 1140, 1060, 1060, 1070, 1110, 1330, 2210, 7830, 2478],
-                label: 'Expense',
-                borderColor: "red",
-                fill: true
-            }, {
-                data: [1600, 1700, 1700, 1900, 2000, 2700, 4000, 5000, 6000, 7000],
-                label: 'Income',
-                borderColor: "blue",
-                fill: true
-            }]
-        },
-        options: {
-            legend: { 
-                display: true
-            },
-            title: {
-                display: true,
-                text: "Incomes and Expenses by week"
             }
         }
     });
