--- a/MoneyManager/MoneyManager/Views/Shared/_LoginPartial.cshtml
+++ b/MoneyManager/MoneyManager/Views/Shared/_LoginPartial.cshtml
@@ -11,7 +11,7 @@
             <a  class="nav-link bg-white"  title="Manage">Hello, @User.Identity?.Name!</a>
         </li>
         <li class="nav-item">
-            <form class="form-inline" asp-controller="User" asp-action="Logout" asp-route-id="@UserManager.GetUserId(User)">
+            <form class="form-inline" asp-area="" asp-controller="User" asp-action="Logout" asp-route-id="@UserManager.GetUserId(User)">
                 <button type="submit" class="nav-link btn btn-link bg-white">Logout</button>
             </form>
         </li>
@@ -19,10 +19,10 @@
 else
 {
         <li class="nav-item">
-            <a class="nav-link bg-white" asp-controller="User" asp-action="Register">Register</a>
+            <a class="nav-link bg-white" asp-area="" asp-controller="User" asp-action="Register">Register</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link bg-white" asp-controller="User" asp-action="Login">Login</a>
+            <a class="nav-link bg-white" asp-area="" asp-controller="User" asp-action="Login">Login</a>
         </li>
 }
 </ul>
