--- a/MoneyManager/MoneyManager/Views/Shared/_Layout.cshtml
+++ b/MoneyManager/MoneyManager/Views/Shared/_Layout.cshtml
@@ -16,8 +16,9 @@
                 {
                     <a class="navbar-brand nav-link bg-white" asp-controller="Home" asp-action="Dashboard">MoneyManager</a>
                 }
-                else{
-                    <a class="navbar-brand nav-link bg-white"  asp-controller="Home" asp-action="Index">MoneyManager</a>
+                else
+                {
+                    <a class="navbar-brand nav-link bg-white" asp-controller="Home" asp-action="Index">MoneyManager</a>
 
                 }
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -52,6 +53,16 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+
+            @if (TempData["message"] != null)
+            {
+                <div class="alert alert-success alert-dismissible fade show" role="alert">
+                    @TempData["message"]
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+                        <span hidden>&#10006;</span>
+                    </button>
+                </div>
+            }
             @RenderBody()
         </main>
     </div>
