Add more actions to admin area

--- a/MoneyManager/MoneyManager/Areas/Admin/Views/Admin/Index.cshtml
+++ b/MoneyManager/MoneyManager/Areas/Admin/Views/Admin/Index.cshtml
@@ -7,12 +7,26 @@
     <p class="lead mb-1 mt-3">
         This is your administrator area - you can <b style="color:red">delete</b>, <b style="color:darkorange">edit</b> and <b style="color:green">add</b> categories for <b>incomes</b> and <b>expenses</b>.
     </p>
-    <p style="color:red;" class="lead mt-1">
-        If you want to add <b>incomes, expenses and accounts</b> in the system you have to log in as "user"!
+    <p class="lead mt-1">
+        If you want, you can add <b>incomes, expenses and accounts</b> in the system also!
+    </p>
+    <p class="lead mt-1">
+        You can see your <b style="color:green;">dashboard</b> when you click <a asp-area="admin" asp-controller="Admin" asp-action="Dashboard">here</a>!
     </p>
     <hr class="my-4">
-    <a  asp-area="Admin" asp-controller="CategoryIncome" asp-action="All"
+    <a asp-area="Admin" asp-controller="CategoryIncome" asp-action="All"
        class="btn btn-success btn-lg">All Income categories</a>
+       <span>|</span>
     <a asp-area="Admin" asp-controller="CategoryExpense" asp-action="All"
        class="btn  btn-success btn-lg">All Expense categories</a>
+    <br>
+    <br>
+    <a asp-area="Admin" asp-controller="Income" asp-action="All"
+       class="btn  btn-success btn-lg">All incomes</a>
+    <span>|</span>
+    <a asp-area="Admin" asp-controller="Expense" asp-action="All"
+       class="btn  btn-success btn-lg">All expenses</a>
+    <span>|</span>
+    <a asp-area="Admin" asp-controller="Account" asp-action="All"
+       class="btn  btn-success btn-lg">All accounts</a>
 </div>
