--- a/MoneyManager/MoneyManager/Views/Shared/_LoginPartial.cshtml
+++ b/MoneyManager/MoneyManager/Views/Shared/_LoginPartial.cshtml
@@ -5,24 +5,32 @@
 @inject UserManager<ApplicationUser> UserManager
 
 <ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
-{
+    @if (SignInManager.IsSignedIn(User))
+    {
         <li class="nav-item">
-            <a  class="nav-link bg-white"  title="Manage">Hello, @User.Identity?.Name!</a>
+            @if (User.IsInRole("Admin"))
+            {
+                <a asp-area="Admin" asp-controller="Admin" asp-action="Index" class="nav-link bg-white" title="Manage">Hello, @User.Identity?.Name!</a>
+            }
+            else
+            {
+
+                <a class="nav-link bg-white" title="Manage">Hello, @User.Identity?.Name!</a>
+            }
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="" asp-controller="User" asp-action="Logout" asp-route-id="@UserManager.GetUserId(User)">
                 <button type="submit" class="nav-link btn btn-link bg-white">Logout</button>
             </form>
         </li>
-}
-else
-{
+    }
+    else
+    {
         <li class="nav-item">
             <a class="nav-link bg-white" asp-area="" asp-controller="User" asp-action="Register">Register</a>
         </li>
         <li class="nav-item">
             <a class="nav-link bg-white" asp-area="" asp-controller="User" asp-action="Login">Login</a>
         </li>
-}
+    }
 </ul>
